--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,38 +21,38 @@
 
     <Button
         android:id="@+id/hub_home"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_width="100dp"
         android:background="#81ADC8"
         android:text="@string/home"
         android:textColor="#AFE059"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=""
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent=".33" />
 
 
     <Button
         android:id="@+id/hub_info"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#81ADC8"
         android:text="@string/info"
         android:textColor="#AFE059"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent=".33" />
 
     <Button
         android:id="@+id/hub_profile"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#81ADC8"
         android:text="@string/profile"
         android:textColor="#AFE059"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/hub_info"
-        app:layout_constraintStart_toEndOf="@+id/hub_home" />
+        app:layout_constraintStart_toEndOf="@+id/hub_home"
+        app:layout_constraintWidth_percent=".33" />
 
     <TextView
         android:id="@+id/profile_user"
@@ -110,6 +110,7 @@
         android:text="@string/resources"
         android:textColor="#3376BC"
         android:textSize="20sp"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/hub_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
