--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.ResourcesActivity"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".view.MainActivity">
 
-    <Button
-        android:id="@+id/sign_out"
+    <TextView
+        android:id="@+id/hub_welcome2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_out"
-        app:layout_constraintBottom_toTopOf="@id/increment"
+        android:layout_marginTop="342dp"
+        android:layout_marginBottom="310dp"
+        android:letterSpacing="0"
+        android:text="@string/high_there"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#3376BC"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/hub_info2"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:background="#81ADC8"
+        android:text="@string/info"
+        android:textColor="#AFE059"
+        app:layout_constraintWidth_percent=".33"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/hub_home2"
+        android:layout_width="0sp"
+        android:layout_height="wrap_content"
+        android:background="#81ADC8"
+        android:text="@string/home"
+        android:textColor="#AFE059"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent=".33" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="user image"
+        android:src="@drawable/sona_transparent_big"
+        app:layout_constraintBottom_toTopOf="@+id/hub_welcome2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_bias="0.794"/>
 
     <Button
-        android:id="@+id/increment"
-        android:layout_width="wrap_content"
+        android:id="@+id/hub_profile2"
+        android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/increment"
-        app:layout_constraintBottom_toTopOf="@+id/var_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_out" />
-
-    <TextView
-        android:id="@+id/var_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="Variable:"
+        android:background="#81ADC8"
+        android:text="@string/profile"
+        android:textColor="#AFE059"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/var_result"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/increment" />
+        app:layout_constraintEnd_toStartOf="@+id/hub_info2"
+        app:layout_constraintStart_toEndOf="@+id/hub_home2" />
 
-    <TextView
-        android:id="@+id/var_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        app:layout_constraintBaseline_toBaselineOf="@id/var_label"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/var_label" />
-  
     <Button
-        android:id="@+id/home_sign_in"
-        android:layout_width="wrap_content"
+        android:id="@+id/hub_about_day2"
+        android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in"
-        app:layout_constraintEnd_toEndOf="@+id/sign_out"
-        app:layout_constraintStart_toStartOf="@+id/sign_out"
-        tools:layout_editor_absoluteY="100dp" />
-
+        android:background="#afe059"
+        android:fontFamily="sans-serif"
+        android:text="@string/feeling"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
