--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
     <!-- Screens background color-->
     <color name="bg_screen1">#EBC21A</color>
-    <color name="bg_screen2">#20d2bb</color>
+    <color name="bg_screen2">#0ec6c0</color>
     <color name="bg_screen3">#3395ff</color>
     <color name="bg_screen4">#c873f4</color>
 
