--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -348,14 +348,53 @@
                 android:textColor="#FFFFFF"
                 android:textSize="14sp" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+            <LinearLayout
+                android:id="@+id/Navigation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#0ec6c0"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:title="Tools" />
+                android:layout_height="match_parent"
+                android:background="@color/result_text_color"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+                <Button
+                    android:id="@+id/hub_info1"
+                    android:layout_width="135sp"
+                    android:layout_height="wrap_content"
+                    android:background="#0ec6c0"
+                    android:text="@string/home"
+                    android:textColor="@color/dot_light_screen1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintWidth_percent=".33" />
+
+                <Button
+                    android:id="@+id/hub_info2"
+                    android:layout_width="135sp"
+                    android:layout_height="wrap_content"
+                    android:background="#0ec6c0"
+                    android:text="@string/profile"
+                    android:textColor="@color/dot_light_screen1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintWidth_percent=".33" />
+
+                <Button
+                    android:id="@+id/hub_info3"
+                    android:layout_width="135sp"
+                    android:layout_height="wrap_content"
+                    android:background="#0ec6c0"
+                    android:text="@string/info"
+                    android:textColor="@color/dot_light_screen1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintWidth_percent=".33" />
+            </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
